Grid Import fully implemented
importGrid() now working with no visible issues. Error checking for invalid Pieces completed.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "vector": "cpp",
         "string": "cpp",
         "*.tcc": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "new": "cpp"
     }
 }
